@@ -28,6 +28,11 @@
       <scope>system</scope>
       <systemPath>/usr/share/java/turbojpeg.jar</systemPath>
     </dependency>
+    <dependency>
+      <groupId>org.sejda.imageio</groupId>
+      <artifactId>webp-imageio</artifactId>
+      <version>0.1.6</version>
+    </dependency>
   </dependencies>
 
   <build>
@@ -37,7 +42,7 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <version>3.2.5</version>
         <configuration>
-          <argLine>-Djava.library.path=/usr/lib/x86_64-linux-gnu</argLine>
+          <argLine>-Djava.library.path=/usr/lib/x86_64-linux-gnu --enable-native-access=ALL-UNNAMED</argLine>
         </configuration>
       </plugin>
     </plugins>
